<resources>
    <string name="app_name">Meus Clientes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cliente</string>
    <string name="nav_header_subtitle">Profº Marco Maddo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="modelo_fragment">Cliente VIP DEMO</string>

    <!-- Opções do Menu Lateral Drawer -->
    <string name="fragmento_adicionar_cliente">Adicionar Cliente</string>
    <string name="fragmento_adicionar_cliente_card">Adicionar Cliente CadView</string>
    <string name="fragmento_lista_clientes">Listar Cliente</string>
    <string name="fragmento_lista_clientes_cad">Listar Cliente CardView</string>
    <string name="fragmento_preto">Fragmento Preto</string>
    <string name="titulo_preto">Preto</string>
    <string name="fragmento_vermelho">Fragmento Vermelho</string>
    <string name="titulo_vermelho">Vermelho</string>
    <string name="fragmento_azul">Fragmento Azul</string>
    <string name="titulo_azul">Azul</string>

    <!-- Label adcionar clientes-->
    <string name="novoCliente">Adicionar Novo Cliente</string>
    <string name="perfilNovoClienteCards">Perfil e Contato</string>
    <string name="enderecoClienteCards">Endereço</string>
        <!-- Opções do Menu Principal -->
    <string name="meu_perfil">Meu Perfil</string>
    <string name="nome_completo_cli">Nome Completo</string>
    <string name="termos_de_uso_cli">Termos de Uso</string>
    <string name="estado_cli">Estado</string>
    <string name="cidade_cli">Cidade</string>
    <string name="bairro_cli">Bairro</string>
    <string name="numero_cli">Numero</string>
    <string name="logradouro_cli">Logradouro</string>
    <string name="cep_cli">Cep</string>
    <string name="e_mail_cli">E-mail</string>
    <string name="telefone_cli">Telefone</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btnSalvar">SALVAR</string>

</resources>
