<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdicionarClienteFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/vermelho"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="no"
            android:gravity="left"
            android:hint="@string/nome_completo_cli"
            android:minHeight="48dp"
            android:textColorHint="#6D4C41"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/telefone_cli"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:autofillHints="no" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/e_mail_cli"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#6D4C41"
            android:textSize="18sp"
            android:autofillHints="no" />

        <EditText
            android:id="@+id/editCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/cep_cli"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#6D4C41"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/logradouro_cli"
            android:minHeight="48dp"
            android:textColorHint="#6D4C41"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/numero_cli"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#6D4C41"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/bairro_cli"
            android:minHeight="48dp"
            android:textColorHint="#6D4C41"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/cidade_cli"
            android:minHeight="48dp"
            android:textColorHint="#6D4C41"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/estado_cli"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/chkTermoDeUso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:hint="@string/termos_de_uso_cli"
            android:minHeight="48dp"
            android:textColorHint="#6D4C41"
            android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancelar" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSalvar" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>
