<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdicionarClienteFragment">

    <ScrollView
        android:id="@+id/scrollAddCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <!--Para usar o cadview deve adicionar a namespace app igual existente acima-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/txtTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/fragmento_adicionar_cliente_card"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/perfilNovoClienteCards"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editNomeCompleto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/nome_completo_cli"
                        android:minHeight="48dp"
                        android:textColorHint="#757575"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/telefone_cli"
                        android:inputType="phone"
                        android:minHeight="48dp"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/e_mail_cli"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textSize="18sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtEndereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/enderecoClienteCards"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editCep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/cep_cli"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editLogradouro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/logradouro_cli"
                        android:minHeight="48dp"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editNumero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/numero_cli"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editBairro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/bairro_cli"
                        android:minHeight="48dp"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editCidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/cidade_cli"
                        android:minHeight="48dp"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editEstado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="left"
                        android:hint="@string/estado_cli"
                        android:minHeight="48dp"
                        android:textColorHint="#757575"
                        android:textSize="18sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <CheckBox
                android:id="@+id/chkTermoDeUso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="left"
                android:hint="@string/termos_de_uso_cli"
                android:minHeight="48dp"
                android:textColorHint="#6D4C41"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="48dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CancelarBotaoCustomizado"
                        android:text="@string/btnCancelar" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSalvar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SalvarBotaoCustomizado"
                        android:text="@string/btnSalvar" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</FrameLayout>
